--- a/Jupyter/Sem1 (analyzation).ipynb
+++ b/Jupyter/Sem1 (analyzation).ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "dict1 = {'One': 1, 'Two': 2, 'Three': 3}"
    ]
   },
@@ -324,7 +325,7 @@
     }
    ],
    "source": [
-    " aggregator(5,10,10)"
+    "aggregator(5,10,10)"
    ]
   },
   {
